k8s-manifests/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: congressus-app
  namespace: anvt-dev
  annotations:
    checkov.io/skip1: "CKV_K8S_40: Not required for this deployment"
    checkov.io/skip2: "CKV_K8S_43: Digest not needed for this deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: congressus-app
  template:
    metadata:
      labels:
        app: congressus-app
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: congressus-app
          image: ghcr.io/anvt-nl/congressus-app:0.34.0
          imagePullPolicy: Always
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8000
          args:
            - "python"
            - "-m"
            - "uvicorn"
            - "main:app"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "8000"
            - "--workers"
            - "4"
          resources:
            requests:
              memory: 512M
              cpu: 250m
            limits:
              memory: 1Gi
              cpu: 500m
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          volumeMounts:
            - name: congressus-cache
              mountPath: /db
            - name: congressus-api-key
              mountPath: /app/api-key-2.txt
              subPath: api-key-2.txt
              readOnly: true
      volumes:
        - name: congressus-cache
          persistentVolumeClaim:
            claimName: congressus-cache
        - name: congressus-api-key
          secret:
            secretName: congressus-api
            items:
              - key: api-key
                path: api-key-2.txt
